--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "bl": "^1.2.0",
+    "body-parser": "^1.18.2",
+    "crypto": "^1.0.1",
+    "jade": "^1.11.0",
+    "path": "^0.12.7",
+    "pug": "^0.1.0",
+    "stylus": "^0.54.5",
     "through2-map": "^3.0.0"
   }
 }
